--- a/libft/Makefile
+++ b/libft/Makefile
@@ -6,7 +6,7 @@
 #    By: jfilguei <jfilguei@student.42.fr>          +#+  +:+       +#+         #
 #                                                 +#+#+#+#+#+   +#+            #
 #    Created: 2023/04/12 18:42:11 by jfilguei          #+#    #+#              #
-#    Updated: 2023/04/12 19:59:23 by jfilguei         ###   ########.fr        #
+#    Updated: 2023/04/18 00:26:52 by jfilguei         ###   ########.fr        #
 #                                                                              #
 # **************************************************************************** #
 
@@ -21,6 +21,10 @@ SRC = ft_atoi.c ft_bzero.c ft_calloc.c ft_isalnum.c ft_isalpha.c ft_isascii.c ft
 		ft_putchar_fd.c ft_putendl_fd.c ft_putnbr_fd.c ft_putstr_fd.c ft_split.c ft_strchr.c \
 		ft_strdup.c ft_striteri.c ft_strjoin.c ft_strlcat.c ft_strlcpy.c ft_strlen.c ft_strmapi.c \
 		ft_strncmp.c ft_strnstr.c ft_strrchr.c ft_strtrim.c ft_substr.c ft_tolower.c ft_toupper.c
+
+BONUS_TARGET = 	ft_lstadd_back.c ft_lstadd_front.c ft_lstclear.c \
+			ft_lstdelone.c ft_lstiter.c ft_lstlast.c \
+			ft_lstmap.c ft_lstnew.c ft_lstsize.c
 
 all: $(NAME)
 
