--- a/libft/Makefile
+++ b/libft/Makefile
@@ -6,7 +6,7 @@
 #    By: jfilguei <jfilguei@student.42.fr>          +#+  +:+       +#+         #
 #                                                 +#+#+#+#+#+   +#+            #
 #    Created: 2023/04/12 18:42:11 by jfilguei          #+#    #+#              #
-#    Updated: 2023/04/18 00:26:52 by jfilguei         ###   ########.fr        #
+#    Updated: 2023/04/20 00:10:05 by jfilguei         ###   ########.fr        #
 #                                                                              #
 # **************************************************************************** #
 
@@ -15,6 +15,10 @@ NAME = libft
 CC = gcc
 
 CFLAGS = -Wall -Wextra -Werror
+
+AR = ar -rc
+
+RM = rm -f
 
 SRC = ft_atoi.c ft_bzero.c ft_calloc.c ft_isalnum.c ft_isalpha.c ft_isascii.c ft_isdigit.c \
 		ft_isprint.c ft_itoa.c ft_memchr.c ft_memcmp.c ft_memcpy.c ft_memmove.c ft_memset.c \
@@ -26,15 +30,30 @@ BONUS_TARGET = 	ft_lstadd_back.c ft_lstadd_front.c ft_lstclear.c \
 			ft_lstdelone.c ft_lstiter.c ft_lstlast.c \
 			ft_lstmap.c ft_lstnew.c ft_lstsize.c
 
+SRCS_OBJ := ${SRC:.c=.o}
+
+BONUS_OBJ := ${BONUS_TARGET:.c=.o}
+
+OBJS := ${SRCS_OBJ} ${BONUS_OBJ}
+
 all: $(NAME)
 
-$(NAME):
-	$(CC) $(CFLAGS) -o $(NAME) $(SRC)
+$(NAME):${SRCS_OBJ}
+	${AR} ${NAME} ${SRCS_OBJ}
+
+bonus: $(OBJS)
+	${AR} ${NAME} ${OBJS}
 
 clean:
-	/bin/rm -f *.o
+	$(RM) $(SRCS_OBJ) $(BONUS_OBJ)
 
 fclean: clean
-	/bin/rm -f $(NAME)
+	$(RM) $(NAME)
 
 re: fclean all
+
+rebonus: fclean bonus
+
+norm:
+	norminette -R CheckForbiddenSourceHeader *.c
+	norminette -R CheckDefine *.h
